# echo-sdk

./: .env.sample  .gitignore  README.md  pyproject.toml
examples/: README.md  mcp_agent_usage.py  mcp_auth_usage.py  prompt_eval_usage.py  prompt_management_usage.py  streaming_usage.py
src/: __init__.py
src/echo/: __init__.py
src/echo/agents/: __init__.py  base.py  config.py  generic_agent.py  schemas.py
src/echo/evals/: __init__.py  base.py  factory.py  langfuse_provider.py
src/echo/knowledge/: __init__.py
src/echo/llm/: __init__.py  anthropic.py  base.py  bedrock.py  config.py  factory.py  gemini.py  openai.py  schemas.py
src/echo/models/: __init__.py  providers.py  user_conversation.py
src/echo/prompts/: __init__.py  base.py  factory.py  langfuse_provider.py
src/echo/tools/: __init__.py  base_elicitation.py  base_tool.py  mcp_connection_manager.py  mcp_provider.py  mcp_tool.py  schemas.py
src/echo/utils/: download.py
tests/: README.md  conftest.py  test_llm_providers_integration.py  test_llm_response.py  test_multimodal_content.py  test_prompts.py
